--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David and Sandra</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/flipdown/flipdown.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript" src="js/flipdown/flipdown.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p class="title"> When David and Sandra meet countdown:</p>
 
-
-
-  
-    <p id="demo"></p>
+    <div class="example">
+        <div id="flipdown" class="flipdown"></div>
+        <div class="buttons">
+        </div>
+    </div>
 
     <div class="pics">
         <img src="./Love3.0.jpg" class="Love">
     </div>
 
-   
 
-
-
-
-    <script src="main.js"></script>
 </body>
 </html>
