--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p class="title"> When David and Sandra meet countdown:</p>
+    <p class="title_black" id="title"> When David and Sandra meet countdown:</p>
 
     <div class="example">
         <div id="flipdown" class="flipdown"></div>
@@ -25,7 +25,7 @@
     </div>
 
     <div class="pics">
-        <img src="./Love3.0.jpg" class="Love">
+        <img src="./Love3.0.jpg" class="Love_black" id="Love">
     </div>
 
 
